main.css
/* html5doctor.com Reset v1.6.1 - http://cssreset.com */
html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}

/* =Global Typography 
------------------------------*/
html {
    background: 0 0 url('images/debut_light.png') repeat;
    border-top: 12px solid #961E00;
}

body {

	font-family: 'Open Sans', sans-serif;
	font-size: 16px; /* set the global base font size for the document. http://goo.gl/06buC */
    line-height:2em; 
}

a, a:visited {
    color: #000;
    text-decoration: underline;
}

h1 {
    font-family: 'Open Sans', sans-serif;
	font-weight: 300;
	font-size: 2em;
    line-height: 1em;
    margin: 1.5em 0 .5em 0;
}

h2 {
    font-weight: normal;
    font-size: 1.2em;
    margin: 0 0 .25em 0;
}

pre {
    white-space: normal;
    margin: 0 2em 2em 2em;
    padding: 0 0 0 12px;
    border: 1px solid #D8D8D8;
    border-left: 3px solid #D8D8D8;
    border-radius: 3px;
    max-width: 100%;
    overflow: auto;
    background: #FFF;
    line-height: 1.7em;
}

pre, code {
    font-family: 'Droid Sans Mono', monospace;
    font-size: .9em;
}

p code,
ul code,
li code {
    white-space: nowrap;
    border: 1px solid #D8D8D8;
    background-color: #FFF;
    border-radius: 3px;
    margin: 0 2px;
    padding: 0 5px;
}

.single img {
    background-color: #FFF;
    padding: 5px;
    display: block;
    margin: 0 auto;
    border: 1px solid #D8D8D8;
    border-radius: 3px;
}

/* =Layout 
------------------------------*/
body {
	width: 70%;
	min-width: 450px;
    max-width: 680px;
	margin: 1.5em auto 3em auto;
}

@media screen and (max-width: 480px) {
    body {width: auto; min-width: 240px; padding: 0 15px 0 15px;}
}

header {
	text-align: center;
    margin: 0 0 2em 0;
}

header h1 {
    font-size: 3em;
    margin: 0 0 0 0;
}

footer {
	text-align: center;
    margin: 3em 0 0 0;
    color: #949384;
}

/* =Header 
------------------------------*/
header h1 a, header h1 a:visited {
	text-decoration: none;
	color: #3D3D3D;
}

nav ul li {
    display: inline-block;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    margin: 0 3px 0 3px;
}

nav ul li a, nav ul li a:visited {
    color: #3D3D3D;
}


/* =Article Listing 
------------------------------*/
.post {
    margin: 0 0 1.5em 0;
}

.post h2 a {
    text-decoration: none;
    color: #C72800;
}

.post-content {
    box-shadow: rgba(0, 0, 0, 0.05) 1px 1px 1px;
    background-color: #ffffff;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 4px;
    padding: 10px 20px;
    margin: 0 0 .5em 0;
}

.post-meta {
    font-style: italic;
    font-size: .9em;
    color: #949384;
    margin-right: 1em;
    text-align: right;
}

/* =Single 
------------------------------*/
.single p,
.single ul,
.single ol {
    margin-bottom: 2em;
}

.single ul,
.single ol {
    margin-left: 2em;
}

.single-heading {
    text-align: center;
}
.single-heading h1 {
    color: #C72800;
    font-weight: 400;
    margin-top: 0;
}

.single-heading p {
    margin: 0 0 1em 0;
}

.single h1:after {
    content: " ";
    display: block;
    width: 80%;
    height: 1px;
    background-color: #D8D8D8;
    margin: .5em auto .5em 0;
}

.single-heading h1:after {
    margin: .5em auto;
}

.intro {
    font-weight: 300;
    font-size: 1.5em;
    color: #8c8c8c;
    margin-bottom: 2em;
}

.intro a {
    text-decoration: none;
    color: #484848;
}

.single .post-meta {
    margin: 1em 0 0 0;
}

.single:after {
    content: " ";
    display: block;
    width: 80%;
    height: 1px;
    background-color: #D8D8D8;
    margin: 4em auto 1em auto ;
}


/* =Syntax Highlighting 
---------------------------------*/
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: bold } /* Keyword */
.highlight .o { font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { font-weight: bold } /* Keyword.Constant */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d14 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d14 } /* Literal.String.Backtick */
.highlight .sc { color: #d14 } /* Literal.String.Char */
.highlight .sd { color: #d14 } /* Literal.String.Doc */
.highlight .s2 { color: #d14 } /* Literal.String.Double */
.highlight .se { color: #d14 } /* Literal.String.Escape */
.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
.highlight .si { color: #d14 } /* Literal.String.Interpol */
.highlight .sx { color: #d14 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d14 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */

